services/fd-tagging-tool/src/test/resources/valid/PossibleConfiguration/PossibleConfiguration.tg
package valid.PossibleConfiguration;

tagging PossibleConfiguration {
    feature valid.PossibleConfiguration.PossibleConfiguration.Car contains valid.PossibleConfiguration.PossibleConfiguration;
    feature valid.PossibleConfiguration.PossibleConfiguration.SmallTrunk contains valid.PossibleConfiguration.PossibleConfiguration.sink;
    feature valid.PossibleConfiguration.PossibleConfiguration.PanoramicRoof contains valid.PossibleConfiguration.PossibleConfiguration.sink;
}