services/fd-tagging-tool/src/test/resources/invalid/NoComponentPresent/NoComponentPresent.tg
package invalid.NoComponentPresent;

tagging NoComponentPresent {
    feature invalid.NoComponentPresent.NoComponentPresent.Car contains invalid.NoComponentPresent.NoComponentPresent.sink2;
}